force-app/main/default/objects/VisualAntidote__Form_Rule__c/fields/VisualAntidote__Form__c.field-meta.xml
<CustomField>
    <fullName>VisualAntidote__Form__c</fullName>
    <label>Form</label>
    <referenceTo>VisualAntidote__Previous_Form__c</referenceTo>
    <relationshipLabel>Form Rules</relationshipLabel>
    <relationshipName>Form_Rules</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>