force-app/main/default/objects/VisualAntidote__Form_Rule__c/fields/VisualAntidote__Rule_Name__c.field-meta.xml
<CustomField>
    <fullName>VisualAntidote__Rule_Name__c</fullName>
    <label>Rule Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>