force-app/main/default/objects/VisualAntidote__Form_Rule__c/fields/VisualAntidote__Rule_Script__c.field-meta.xml
<CustomField>
    <fullName>VisualAntidote__Rule_Script__c</fullName>
    <label>Rule Script</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>