force-app/main/default/objects/VisualAntidote__Form_Rule__c/fields/VisualAntidote__Rule_XML__c.field-meta.xml
<CustomField>
    <fullName>VisualAntidote__Rule_XML__c</fullName>
    <label>Rule XML</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>